# tiger-slack

./: .env.sample  .gitignore  .gitmodules  CLAUDE.md  LICENSE  NOTICE  README.md  biome.json  check  create-sealed-secrets.sh  docker-compose.yml  justfile  llms.txt  pyproject.toml  setup-tiger-slack.sh  slack-app-manifest.json
.github/: CODEOWNERS
.github/workflows/: build-and-deploy-ingest-on-merge.yml  build-and-deploy-mcp-on-merge.yml  build-ingest-on-feature-branch.yaml  build-mcp-on-feature-branch.yaml  cd.yml  ci.yml  code-quality.yml  deploy-ingest-on-feature-branch.yaml  deploy-mcp-on-feature-branch.yaml  docker-build.yml  lint.yml  publish-docker-images.yaml
db/: Dockerfile  pyproject.toml
db/tiger_slack/: events.py  import.py
db/tiger_slack/migrations/: runner.py
db/tiger_slack/migrations/idempotent/: 000-timestamptz.sql  003-channel.sql  004-message.sql
ingest/: .dockerignore  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
ingest/scripts/: backfill_searchable_content.py  generate_dummy_messages.py  import.py  migrate_messages.py
ingest/tests/: test_utils.py
ingest/tiger_slack/: __init__.py  constants.py  embed_messages.py  events.py  import.py  jobs.py  logging_config.py  main.py  migrate_messages.py  utils.py
ingest/tiger_slack/migrations/: runner.py
ingest/tiger_slack/migrations/idempotent/: 002-user.sql  004-message.sql  005-reaction.sql  006-message-with-embedding.sql  007-message-and-message-vanilla.sql  008-message-bulk-insert.sql  008-message-search.sql
ingest/tiger_slack/migrations/incremental/: 000-event.sql  000-timescaledb.sql  001-event.sql  001-user.sql  003-channel.sql  003-message.sql  004-message-with-hybrid-search.sql  004-message.sql  005-create-message-vectorizer.sql  005-message-vanilla.sql  006-message-vanilla-indexes.sql  007-message-vanilla-add-searchable-content.sql  008-message-recompress-remove-search-related-columns-and-indexes.sql  009-message-vanilla-add-indexes.sql
ingest/tiger_slack/migrations/sql/: init.sql  timescaledb.sql
mcp/: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  biome.json  bun  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
mcp/src/: httpServer.ts  index.ts  serverInfo.ts  stdio.ts  types.ts
mcp/src/apis/: getChannels.ts  getConversationsInChannel.ts  getConversationsWithUser.ts  getMessageContext.ts  getRecentConversationsInChannel.ts  getRecentConversationsWithUser.ts  getThreadMessages.ts  getUsers.ts  index.ts  search.ts
mcp/src/util/: addChannelInfo.ts  addMessageLinks.ts  date.ts  findChannel.ts  findUser.ts  formatTs.ts  getChannelIds.ts  getMessageKey.ts  getUsersMap.ts  messageFields.ts  messagesToTree.ts  normalizeMessageFilterQueryParameters.ts  selectExpandedMessages.ts
tiger_slack/: agent.py  events.py  jobs.py  main.py
tiger_slack/migrations/: runner.py
tiger_slack/migrations/idempotent/: 000-timestamptz.sql  001-event.sql  003-channel.sql  004-message.sql  005-reaction.sql  006-user-search.sql  007-channel-search.sql
tiger_slack/migrations/incremental/: 000-timescaledb.sql  001-event.sql  002-user.sql  003-channel.sql  004-message.sql
tiger_slack/migrations/sql/: init.sql  migration.sql
