[project]
name = "tiger-slack"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocron>=2.1",
    "logfire[httpx,psycopg,system-metrics]>=4.3.6",
    "psycopg[pool]>=3.2.9",
    "pydantic-ai[logfire]>=0.8.0",
    "python-dotenv[cli]>=1.1.1",
    "semver>=3.0.4",
    "slack-bolt>=1.23.0",
    "websockets>=15.0.1",
]
