[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiger-slack"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocron>=2.1",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "click>=8.2.1",
    "logfire[psycopg,system-metrics]>=4.10.0",
    "pgvector>=0.4.2",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic-ai>=1.39.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv[cli]>=1.1.1",
    "semver>=3.0.4",
    "tiktoken>=0.12.0",
    "slack-bolt>=1.25.0",
    "websockets>=15.0.1",
]

[tool.hatch.version]
path = "tiger_slack/__init__.py"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "pyright>=1.1.390",
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 88
indent-width = 4
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "ARG",  # unused arguments
    "W291", # trailing whitespace
    "PIE",  # print statements
    "Q"     # flakes8-quote
]
ignore = ["E501"] # we use `ruff format` on everything, so this is just annoying
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pyright]
include = ["tiger_slack"]
exclude = [".venv", "**/__pycache__"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportUnnecessaryTypeIgnoreComment = false
reportArgumentType = "none"
reportGeneralTypeIssues = "warning"
